--- a/Lecture_02_11_2020/index.html
+++ b/Lecture_02_11_2020/index.html
@@ -25,5 +25,87 @@
       consequuntur necessitatibus labore ab reprehenderit commodi aperiam
       maiores nobis eum?
     </p>
+    <hr />
+
+    <ul class="frontend">
+      <li>
+        HTML
+        <ul class="lst-none text-red">
+          <li>HTML 4.01</li>
+          <li>HTML 5</li>
+        </ul>
+      </li>
+
+      <li>
+        CSS
+        <ul class="lst-none text-red">
+          <li class="lst-disc">CSS 2</li>
+          <li>CSS 3</li>
+          <li>CSS 4</li>
+        </ul>
+      </li>
+      <li>Javascript</li>
+    </ul>
+    <hr />
+
+    <ol type="1" start="4">
+      <li>
+        HTML
+        <ol>
+          <li>HTML 4.01</li>
+          <li>HTML 5</li>
+        </ol>
+      </li>
+      <li>
+        CSS
+        <ol>
+          <li>CSS 2</li>
+          <li>CSS 3</li>
+          <li>CSS 4</li>
+        </ol>
+      </li>
+      <li>Javascript</li>
+    </ol>
+    <hr />
+
+    <dl>
+      <dt>
+        <b>HTML</b>
+      </dt>
+      <dd>Hypertext markup language</dd>
+      <dt>
+        <b>CSS</b>
+      </dt>
+      <dd>Cascading StyleSheets</dd>
+    </dl>
+    <hr />
+    <hr />
+
+    <table border cellpadding="10">
+      <tbody>
+        <tr>
+          <td>კრიშტიანუ</td>
+          <td>რონალდუ</td>
+        </tr>
+        <tr>
+          <td>კრიშტიანუ</td>
+          <td>რონალდუ</td>
+        </tr>
+      </tbody>
+
+      <thead>
+        <tr>
+          <th>სახელი</th>
+          <th>გვარი</th>
+        </tr>
+      </thead>
+
+      <tfoot>
+        <tr>
+          <th>სახელი footer</th>
+          <th>გვარი footer</th>
+        </tr>
+      </tfoot>
+    </table>
   </body>
 </html>
